--- a/main.html
+++ b/main.html
@@ -3,13 +3,34 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+<!-- 	<link rel="stylesheet" href="styles.css"> -->
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<!--     <script type="text/javascript" src="./script.js">
+</script> -->
+	 <nav>
+    <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Beagle">Home</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Beagle">About us</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Beagle">Contact us</a></li>
+    </ul>
+   </nav>
+   <main>
+    <section>
+        <h1>Audio 1</h1>
+        <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls="audio/mpeg"></audio>
+    </section>
+    <section>
+        <h1>Audio 2</h1>
+        <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls="audio/mpeg"  ></audio>
+    </section>
+    <section>
+        <h1>Audio 3</h1>
+       <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3." controls="audio/mpeg" ></audio>
+    </section>
+   </main>
 
 </body>
 
