--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     </section>
     <section>
         <h2>Audio 3</h2>
-       <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls="audio/mpeg" ></audio>
+       <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls="audio/mpeg" ></audio>
     </section>
    </main>
 
