--- a/main.html
+++ b/main.html
@@ -19,15 +19,15 @@
    </nav>
    <main>
     <section>
-        <h1>Audio 1</h1>
+        <h1>3 random audios</h1>
         <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls="audio/mpeg"></audio>
     </section>
     <section>
-        <h2>Audio 2</h2>
+        <h2>3 random audios</h2>
         <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls="audio/mpeg"  ></audio>
     </section>
     <section>
-        <h2>Audio 3</h2>
+        <h2>3 random audios</h2>
        <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls="audio/mpeg" ></audio>
     </section>
    </main>
